# WavDrumVST

./: .gitignore  Build.sh  CMakeLists.txt  Check.sh  CleanBuild.sh  LICENSE  README.md  Run.sh  collect_samples.sh
Frontend/: index.html  package-lock.json  package.json  vite.config.ts
Frontend/src/: App.css  App.tsx  index.css  juce_interop.d.ts  juce_interop.js
Frontend/src/components/: AdsrGraph.tsx  AudioEditModal.tsx  DrumPad.tsx  DrumRack.tsx  WaveformEditor.tsx
Source/: AudioEditor.cpp  AudioEditor.h  AudioProcessor.cpp  AudioProcessor.h  DrumSynth.cpp  DrumSynth.h  StateManager.cpp  StateManager.h
